--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aleph-js": "^0.5.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "quasar": "^2.0.0",
     "vuex": "^4.0.1"
   },
